--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "MusicSence",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt-contrib-watch":      "latest",
+    "grunt-contrib-cssmin":     "latest",
+    "grunt-contrib-uglify":     "latest",
+    "grunt-contrib-concat":     "latest",
+    "grunt-contrib-jshint":     "latest",
+    "grunt-contrib-handlebars": "latest",
+    "grunt-contrib-clean":      "latest"
   }
 }
