--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "handlebars": "~1.3.0"
   }
 }
