Локальный сервер под nodejs для прокси запросов на API 10tracks. Методы аутентификации и авторизации

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "grunt-contrib-concat":     "latest",
     "grunt-contrib-jshint":     "latest",
     "grunt-contrib-handlebars": "latest",
-    "grunt-contrib-clean":      "latest"
+    "grunt-contrib-clean":      "latest",
+    "connect":                  "latest",
+    "http-proxy":               "latest",
+    "serve-static":             "latest"
   }
 }
