--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "backbone": "~1.1.2",
     "handlebars": "~1.3.0",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "momentjs": "~2.8.2"
   }
 }
