--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "backbone": "~1.1.2",
     "handlebars": "~1.3.0",
     "jquery": "~2.1.1",
-    "momentjs": "~2.8.2"
+    "momentjs": "~2.8.2",
+    "soundmanager": "*"
   }
 }
