--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "handlebars": "~1.3.0",
     "jquery": "~2.1.1",
     "momentjs": "~2.8.2",
-    "soundmanager": "*"
+    "soundmanager": "*",
+    "backbone.soundmanager2": "~0.1.2"
   }
 }
