--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "jquery": "~2.1.1",
     "momentjs": "~2.8.2",
     "soundmanager": "*",
-    "backbone.soundmanager2": "~0.1.2"
+    "backbone.soundmanager2": "~0.1.2",
+    "bootstrap": "~3.2.0"
   }
 }
