Удалены зависимости для node.js, т. к. теперь сервер отладки запускается на CentOS через Vagrant

--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "grunt-contrib-concat":     "latest",
     "grunt-contrib-jshint":     "latest",
     "grunt-contrib-handlebars": "latest",
-    "grunt-contrib-clean":      "latest",
-    "connect":                  "latest",
-    "http-proxy":               "latest",
-    "serve-static":             "latest"
+    "grunt-contrib-clean":      "latest"
   }
 }
