--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "momentjs": "~2.8.2",
     "soundmanager": "*",
     "backbone.soundmanager2": "~0.1.2",
-    "bootstrap": "~3.2.0",
-    "backbone.stickit": "~0.8.0"
+    "backbone.stickit": "~0.8.0",
+    "bootstrap": "~3.3.2"
   }
 }
