--- a/bower.json
+++ b/bower.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "backbone": "~1.1.2",
     "handlebars": "~2.0.0",
-    "jquery": "~2.1.1",
+    "jquery": "~2.1.3",
     "momentjs": "~2.8.2",
     "soundmanager": "*",
     "backbone.soundmanager2": "~0.1.2",
     "backbone.stickit": "~0.8.0",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "typeahead.js": "~0.10.5"
   }
 }
