--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "backbone.soundmanager2": "~0.1.2",
     "backbone.stickit": "~0.8.0",
     "bootstrap": "~3.3.2",
-    "typeahead.js": "~0.10.5"
+    "typeahead.js": "~0.10.5",
+    "underscore.string": "~3.0.3"
   }
 }
